css/style.css
/* ... */
.mil-circle-text .mil-ct-svg {
  -webkit-transform: scale(2);
          transform: scale(2);
  width: 140px;
  height: 140px;
}
.mil-circle-text .mil-ct-svg text {
  fill: rgba(255, 255, 255, 0.4);
  text-transform: uppercase;
  font-size: 12px;
  font-weight: 500;
  -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
  transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
}
.mil-circle-text .mil-button {
  position: absolute;
}
.mil-circle-text:hover svg text {
  fill: rgb(255, 255, 255);
}
@media screen and (max-width: 992px) {
  .mil-circle-text {
    display: none;
  }
}

/* -------------------------------------------

lines

------------------------------------------- */
@-webkit-keyframes move {
  from {
    -webkit-transform: translateY(-75px);
            transform: translateY(-75px);
  }
  50% {
    -webkit-transform: translateY(75px);
            transform: translateY(75px);
  }
  to {
    -webkit-transform: translateY(-75px);
            transform: translateY(-75px);
  }
}
@keyframes move {
  from {
    -webkit-transform: translateY(-75px);
            transform: translateY(-75px);
  }
  50% {
    -webkit-transform: translateY(75px);
            transform: translateY(75px);
  }
  to {
    -webkit-transform: translateY(-75px);
            transform: translateY(-75px);
  }
}
.mil-lines-place .mil-lines {
  opacity: 0.05;
  pointer-events: none;
}
@media screen and (max-width: 992px) {
  .mil-lines-place .mil-lines {
    display: none;
  }
}
.mil-lines-place .mil-lines path, .mil-lines-place .mil-lines rect, .mil-lines-place .mil-lines line {
  stroke: rgb(0, 0, 0);
}
.mil-lines-place .mil-lines .mil-move {
  -webkit-animation: move 10s linear infinite;
          animation: move 10s linear infinite;
}
.mil-lines-place.mil-light .mil-lines {
  opacity: 0.2;
}
.mil-lines-place.mil-light .mil-lines path, .mil-lines-place.mil-light .mil-lines rect, .mil-lines-place.mil-light .mil-lines line {
  stroke: rgb(255, 255, 255);
}

/* -------------------------------------------

dodecahedron

------------------------------------------- */
.mil-animation-frame {
  width: 100%;
  height: 100vh;
  position: absolute;
  top: 0;
  -webkit-animation: jump 10s linear infinite;
          animation: jump 10s linear infinite;
  pointer-events: none;
}

.mil-animation {
  position: absolute;
  display: inline-block;
  width: 300px;
  height: 300px;
  opacity: 0.2;
  pointer-events: none;
}

.mil-position-1 {
  top: 100px;
  right: 100px;
}
.mil-position-1 .mil-pentagon div {
  border-top: 0.1px solid rgb(255, 255, 255);
}

.mil-position-2 {
  top: -60px;
  left: 15%;
}
.mil-position-2 .mil-pentagon div {
  border-top: 1px solid rgb(255, 255, 255);
}
.mil-position-2 .mil-dodecahedron {
  -webkit-animation-delay: 0.5s;
          animation-delay: 0.5s;
}
@media screen and (max-width: 1400px) {
  .mil-position-2 {
    display: none;
  }
}

.mil-position-3 {
  bottom: -100px;
  right: 35%;
}
.mil-position-3 .mil-pentagon div {
  border-top: 1px solid rgb(255, 255, 255);
}
.mil-position-3 .mil-dodecahedron {
  -webkit-animation-delay: 1s;
          animation-delay: 1s;
}
@media screen and (max-width: 1400px) {
  .mil-position-3 {
    display: none;
  }
}

.mil-position-4 {
  top: -60px;
  right: 20%;
}
.mil-position-4 .mil-pentagon div {
  border-top: 0.1px solid rgb(255, 255, 255);
}
.mil-position-4 .mil-dodecahedron {
  -webkit-animation-delay: 0.5s;
          animation-delay: 0.5s;
}
@media screen and (max-width: 1400px) {
  .mil-position-4 {
    display: none;
  }
}
.mil-position-4.mil-dark .mil-pentagon div {
  border-top: 0.1px solid rgb(0, 0, 0);
}

.mil-dodecahedron {
  position: relative;
  left: 100px;
  top: 40px;
  width: 100px;
  height: 223px;
  -webkit-transform-style: preserve-3d;
          transform-style: preserve-3d;
  -webkit-animation: rotate 100s infinite linear;
          animation: rotate 100s infinite linear;
}
@-webkit-keyframes rotate {
  from {
    -webkit-transform: rotateX(0deg) rotateY(360deg) rotateZ(360deg);
            transform: rotateX(0deg) rotateY(360deg) rotateZ(360deg);
  }
  to {
    -webkit-transform: rotateX(360deg) rotateY(0deg) rotateZ(-360deg);
            transform: rotateX(360deg) rotateY(0deg) rotateZ(-360deg);
  }
}
@keyframes rotate {
  from {
    -webkit-transform: rotateX(0deg) rotateY(360deg) rotateZ(360deg);
            transform: rotateX(0deg) rotateY(360deg) rotateZ(360deg);
  }
  to {
    -webkit-transform: rotateX(360deg) rotateY(0deg) rotateZ(-360deg);
            transform: rotateX(360deg) rotateY(0deg) rotateZ(-360deg);
  }
}

.mil-pentagon {
  position: absolute;
  width: 100px;
}
.mil-pentagon:nth-child(1) {
  -webkit-transform: rotateY(0.2turn) translateZ(69px) rotateX(26.5deg);
          transform: rotateY(0.2turn) translateZ(69px) rotateX(26.5deg);
}
.mil-pentagon:nth-child(6) {
  bottom: 0;
  -webkit-transform: rotateY(0.2turn) translateZ(-69px) rotateX(206.5deg);
          transform: rotateY(0.2turn) translateZ(-69px) rotateX(206.5deg);
}
.mil-pentagon:nth-child(2) {
  -webkit-transform: rotateY(0.4turn) translateZ(69px) rotateX(26.5deg);
          transform: rotateY(0.4turn) translateZ(69px) rotateX(26.5deg);
}
.mil-pentagon:nth-child(7) {
  bottom: 0;
  -webkit-transform: rotateY(0.4turn) translateZ(-69px) rotateX(206.5deg);
          transform: rotateY(0.4turn) translateZ(-69px) rotateX(206.5deg);
}
.mil-pentagon:nth-child(3) {
  -webkit-transform: rotateY(0.6turn) translateZ(69px) rotateX(26.5deg);
          transform: rotateY(0.6turn) translateZ(69px) rotateX(26.5deg);
}
.mil-pentagon:nth-child(8) {
  bottom: 0;
  -webkit-transform: rotateY(0.6turn) translateZ(-69px) rotateX(206.5deg);
          transform: rotateY(0.6turn) translateZ(-69px) rotateX(206.5deg);
}
.mil-pentagon:nth-child(4) {
  -webkit-transform: rotateY(0.8turn) translateZ(69px) rotateX(26.5deg);
          transform: rotateY(0.8turn) translateZ(69px) rotateX(26.5deg);
}
/* ... */

